--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             Analytics Portfolio</p>
 
         <h1>Bridging the gap between <br> <span style="font-style: italic; color: var(--text-gold);">Raw Data</span> and
-            <span style="font-style: italic; color: var(--text-gold);">Business Impact</span>.</h1>
+            <span style="font-style: italic; color: var(--text-gold);">Business Impact</span>.
+        </h1>
 
         <p class="text-grey lead mb-4 mx-auto" style="max-width: 800px;">
             Mahasiswa Sistem Informasi dengan visi strategis sebagai <strong>Data Scientist</strong>.
@@ -184,14 +185,48 @@
 
         <div class="mt-4">
             <span class="tech-tag">Python (Numpy/Pandas/Scikit-learn)</span>
+            <span class="tech-tag">Excel Dashboard</span>
             <span class="tech-tag">Machine Learning</span>
             <span class="tech-tag">PostgreSQL</span>
-            <span class="tech-tag">Data Visualization</span>
         </div>
     </section>
 
     <section class="project-section">
         <div class="container">
+
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-4 mb-lg-0">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                        alt="Superstore Sales Dashboard Illustration" class="project-img" style="object-fit: cover;">
+                </div>
+                <div class="col-lg-5 offset-lg-1">
+                    <span class="project-category">Data Analytics • Visualization</span>
+                    <h2 class="project-title">Superstore Executive Sales Dashboard</h2>
+                    <div class="mb-3">
+                        <span class="tech-tag">Microsoft Excel</span>
+                        <span class="tech-tag">Pivot Table</span>
+                        <span class="tech-tag">Interactive Slicer</span>
+                        <span class="tech-tag">Business Intelligence</span>
+                    </div>
+                    <p class="text-grey">
+                        <strong>Masalah Bisnis:</strong> Manajemen kesulitan memantau KPI penjualan tahunan dan
+                        profitabilitas
+                        secara real-time dari ribuan data transaksi yang tersebar, menghambat pengambilan keputusan
+                        strategis.
+                    </p>
+                    <p class="text-grey">
+                        <strong>Solusi & Hasil:</strong>
+                        Membangun <strong>Interactive Dashboard</strong> komprehensif menggunakan Excel. Fitur mencakup
+                        analisis tren musiman (Seasonality), pelacakan KPI Profit Margin, dan filter dinamis.
+                        Hasilnya memberikan visibilitas instan terhadap produk <em>Top Sales</em> dan wilayah yang
+                        mengalami kerugian (Loss).
+                    </p>
+                    <a href="https://docs.google.com/spreadsheets/d/1izpqg7t9TRJzkUBplUMd4cTwkmxrJJ8r/edit?usp=sharing&ouid=105086866962151085048&rtpof=true&sd=true" class="btn-link-custom mt-3 d-inline-block">Lihat Dashboard Interaktif
+                        <i class="fas fa-chart-line ms-2 small"></i></a>
+                </div>
+            </div>
+
+            <hr class="separator">
 
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
@@ -214,12 +249,15 @@
                     </p>
                     <p class="text-grey">
                         <strong>Solusi & Hasil:</strong>
-                        Saya membangun model <strong>End-to-End</strong> menggunakan Random Forest yang dioptimasi dengan teknik
+                        Saya membangun model <strong>End-to-End</strong> menggunakan Random Forest yang dioptimasi
+                        dengan teknik
                         <strong>SMOTE</strong> dan <strong>Hyperparameter Tuning</strong>.
-                        Hasilnya, kemampuan mendeteksi pelanggan churn (Recall) meningkat drastis dari <strong>46%</strong> menjadi
-                        <strong>68%</strong>, berpotensi menyelamatkan ratusan pelanggan setiap bulannya.
+                        Hasilnya, kemampuan mendeteksi pelanggan churn (Recall) meningkat drastis dari
+                        <strong>46%</strong> menjadi
+                        <strong>68%</strong>.
                     </p>
-                    <a href="https://github.com/Zinedineizaaz/Telco-Customer-Churn-Prediction.git" class="btn-link-custom mt-3 d-inline-block">Lihat Kode di GitHub
+                    <a href="https://github.com/Zinedineizaaz/Telco-Customer-Churn-Prediction.git"
+                        class="btn-link-custom mt-3 d-inline-block">Lihat Kode di GitHub
                         <i class="fab fa-github ms-2 small"></i></a>
                 </div>
             </div>
@@ -246,11 +284,13 @@
                     </p>
                     <p class="text-grey">
                         <strong>Metodologi:</strong>
-                        Melakukan <strong>text preprocessing</strong> mendalam (Stemming, Stopwords removal) dan ekstraksi fitur
-                        menggunakan <strong>TF-IDF</strong>. Model Multinomial Naive Bayes mencapai <strong>akurasi 85%</strong> pada data uji
-                        yang seimbang, membuktikan efektivitas model dalam memahami konteks bahasa manusia.
+                        Melakukan <strong>text preprocessing</strong> mendalam dan ekstraksi fitur
+                        menggunakan <strong>TF-IDF</strong>. Model Multinomial Naive Bayes mencapai <strong>akurasi
+                            85%</strong> pada data uji
+                        yang seimbang.
                     </p>
-                    <a href="https://github.com/Zinedineizaaz/review-sentiment-analysis.git" class="btn-link-custom mt-3 d-inline-block">Lihat Kode di GitHub
+                    <a href="https://github.com/Zinedineizaaz/review-sentiment-analysis.git"
+                        class="btn-link-custom mt-3 d-inline-block">Lihat Kode di GitHub
                         <i class="fab fa-github ms-2 small"></i></a>
                 </div>
             </div>
@@ -273,14 +313,13 @@
                     </div>
                     <p class="text-grey">
                         <strong>Latar Belakang:</strong> Volume data pasar mobil bekas yang besar dan tidak terstruktur
-                        seringkali menghambat analisis harga yang akurat. Proyek ini bertujuan membangun sistem terpusat
-                        untuk mengelola data penjualan Toyota.
+                        menghambat analisis harga yang akurat. Proyek ini bertujuan membangun sistem terpusat.
                     </p>
                     <p class="text-grey">
                         <strong>Solusi Teknis:</strong>
                         Pipeline <strong>ETL</strong> custom dengan Python untuk membersihkan data mentah dan memuatnya
                         ke <strong>PostgreSQL</strong> dengan desain <em>Star Schema</em>. Menerapkan analisis OLAP
-                        untuk menghasilkan insight tren harga dan pelaporan otomatis.
+                        untuk menghasilkan insight tren harga.
                     </p>
                     <a href="Laporan_Hasil_Data_Warehouse.pdf" class="btn-link-custom mt-3 d-inline-block">Lihat
                         Dokumentasi Lengkap <i class="fas fa-file-pdf ms-2 small"></i></a>
